// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers > analysis should handle default state 1`] = `
Object {
  "active": false,
  "copyRequestSettings": true,
  "isochroneFetchStatus": false,
  "maxTripDurationMinutes": 60,
  "regional": Object {
    "_id": null,
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "percentile": 50,
  },
  "requestsSettings": Array [
    Object {
      "accessModes": "WALK",
      "bikeSpeed": 4.166666666666667,
      "bikeTrafficStress": 4,
      "date": "2020-06-10",
      "decayFunction": Object {
        "standardDeviationMinutes": 10,
        "type": "step",
        "widthMinutes": 10,
      },
      "destinationPointSetIds": Array [],
      "directModes": "WALK",
      "egressModes": "WALK",
      "fromTime": 25200,
      "maxBikeTime": 20,
      "maxRides": 4,
      "maxWalkTime": 20,
      "monteCarloDraws": 200,
      "percentiles": Array [
        5,
        25,
        50,
        75,
        95,
      ],
      "toTime": 32400,
      "transitModes": "BUS,TRAM,RAIL,SUBWAY,FERRY,CABLE_CAR,GONDOLA,FUNICULAR",
      "variantIndex": -1,
      "walkSpeed": 1.3888888888888888,
      "workerVersion": "v6.2",
    },
  ],
  "resultsSettings": Array [],
  "scenarioApplicationErrors": null,
  "travelTimePercentile": 50,
}
`;

exports[`reducers > analysis should handle enter analysis mode 1`] = `
Object {
  "active": false,
  "copyRequestSettings": true,
  "isochroneFetchStatus": false,
  "maxTripDurationMinutes": 60,
  "regional": Object {
    "_id": null,
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "percentile": 50,
  },
  "requestsSettings": Array [
    Object {
      "accessModes": "WALK",
      "bikeSpeed": 4.166666666666667,
      "bikeTrafficStress": 4,
      "date": "2020-06-10",
      "decayFunction": Object {
        "standardDeviationMinutes": 10,
        "type": "step",
        "widthMinutes": 10,
      },
      "destinationPointSetIds": Array [],
      "directModes": "WALK",
      "egressModes": "WALK",
      "fromTime": 25200,
      "maxBikeTime": 20,
      "maxRides": 4,
      "maxWalkTime": 20,
      "monteCarloDraws": 200,
      "percentiles": Array [
        5,
        25,
        50,
        75,
        95,
      ],
      "toTime": 32400,
      "transitModes": "BUS,TRAM,RAIL,SUBWAY,FERRY,CABLE_CAR,GONDOLA,FUNICULAR",
      "variantIndex": -1,
      "walkSpeed": 1.3888888888888888,
      "workerVersion": "v6.2",
    },
  ],
  "resultsSettings": Array [],
  "scenarioApplicationErrors": null,
  "travelTimePercentile": 50,
}
`;

exports[`reducers > analysis should handle exit analysis mode 1`] = `
Object {
  "active": false,
  "copyRequestSettings": true,
  "isochroneFetchStatus": false,
  "maxTripDurationMinutes": 60,
  "regional": Object {
    "_id": null,
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "percentile": 50,
  },
  "requestsSettings": Array [
    Object {
      "accessModes": "WALK",
      "bikeSpeed": 4.166666666666667,
      "bikeTrafficStress": 4,
      "date": "2020-06-10",
      "decayFunction": Object {
        "standardDeviationMinutes": 10,
        "type": "step",
        "widthMinutes": 10,
      },
      "destinationPointSetIds": Array [],
      "directModes": "WALK",
      "egressModes": "WALK",
      "fromTime": 25200,
      "maxBikeTime": 20,
      "maxRides": 4,
      "maxWalkTime": 20,
      "monteCarloDraws": 200,
      "percentiles": Array [
        5,
        25,
        50,
        75,
        95,
      ],
      "toTime": 32400,
      "transitModes": "BUS,TRAM,RAIL,SUBWAY,FERRY,CABLE_CAR,GONDOLA,FUNICULAR",
      "variantIndex": -1,
      "walkSpeed": 1.3888888888888888,
      "workerVersion": "v6.2",
    },
  ],
  "resultsSettings": Array [],
  "scenarioApplicationErrors": null,
  "travelTimePercentile": 50,
}
`;

exports[`reducers > analysis should handle set active regional analyses 1`] = `
Object {
  "active": false,
  "copyRequestSettings": true,
  "isochroneFetchStatus": false,
  "maxTripDurationMinutes": 60,
  "regional": Object {
    "_id": "project id",
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": "comparison id",
    "grid": null,
    "percentile": 50,
  },
  "requestsSettings": Array [
    Object {
      "accessModes": "WALK",
      "bikeSpeed": 4.166666666666667,
      "bikeTrafficStress": 4,
      "date": "2020-06-10",
      "decayFunction": Object {
        "standardDeviationMinutes": 10,
        "type": "step",
        "widthMinutes": 10,
      },
      "destinationPointSetIds": Array [],
      "directModes": "WALK",
      "egressModes": "WALK",
      "fromTime": 25200,
      "maxBikeTime": 20,
      "maxRides": 4,
      "maxWalkTime": 20,
      "monteCarloDraws": 200,
      "percentiles": Array [
        5,
        25,
        50,
        75,
        95,
      ],
      "toTime": 32400,
      "transitModes": "BUS,TRAM,RAIL,SUBWAY,FERRY,CABLE_CAR,GONDOLA,FUNICULAR",
      "variantIndex": -1,
      "walkSpeed": 1.3888888888888888,
      "workerVersion": "v6.2",
    },
  ],
  "resultsSettings": Array [],
  "scenarioApplicationErrors": null,
  "travelTimePercentile": 50,
}
`;

exports[`reducers > analysis should handle set isochrone cutoff 1`] = `
Object {
  "active": false,
  "copyRequestSettings": true,
  "isochroneFetchStatus": false,
  "maxTripDurationMinutes": 60,
  "regional": Object {
    "_id": null,
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "percentile": 50,
  },
  "requestsSettings": Array [
    Object {
      "accessModes": "WALK",
      "bikeSpeed": 4.166666666666667,
      "bikeTrafficStress": 4,
      "date": "2020-06-10",
      "decayFunction": Object {
        "standardDeviationMinutes": 10,
        "type": "step",
        "widthMinutes": 10,
      },
      "destinationPointSetIds": Array [],
      "directModes": "WALK",
      "egressModes": "WALK",
      "fromTime": 25200,
      "maxBikeTime": 20,
      "maxRides": 4,
      "maxWalkTime": 20,
      "monteCarloDraws": 200,
      "percentiles": Array [
        5,
        25,
        50,
        75,
        95,
      ],
      "toTime": 32400,
      "transitModes": "BUS,TRAM,RAIL,SUBWAY,FERRY,CABLE_CAR,GONDOLA,FUNICULAR",
      "variantIndex": -1,
      "walkSpeed": 1.3888888888888888,
      "workerVersion": "v6.2",
    },
  ],
  "resultsSettings": Array [],
  "scenarioApplicationErrors": null,
  "travelTimePercentile": 50,
}
`;

exports[`reducers > analysis should handle set isochrone fetch status 1`] = `
Object {
  "active": false,
  "copyRequestSettings": true,
  "isochroneFetchStatus": true,
  "maxTripDurationMinutes": 60,
  "regional": Object {
    "_id": null,
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "percentile": 50,
  },
  "requestsSettings": Array [
    Object {
      "accessModes": "WALK",
      "bikeSpeed": 4.166666666666667,
      "bikeTrafficStress": 4,
      "date": "2020-06-10",
      "decayFunction": Object {
        "standardDeviationMinutes": 10,
        "type": "step",
        "widthMinutes": 10,
      },
      "destinationPointSetIds": Array [],
      "directModes": "WALK",
      "egressModes": "WALK",
      "fromTime": 25200,
      "maxBikeTime": 20,
      "maxRides": 4,
      "maxWalkTime": 20,
      "monteCarloDraws": 200,
      "percentiles": Array [
        5,
        25,
        50,
        75,
        95,
      ],
      "toTime": 32400,
      "transitModes": "BUS,TRAM,RAIL,SUBWAY,FERRY,CABLE_CAR,GONDOLA,FUNICULAR",
      "variantIndex": -1,
      "walkSpeed": 1.3888888888888888,
      "workerVersion": "v6.2",
    },
  ],
  "resultsSettings": Array [],
  "scenarioApplicationErrors": null,
  "travelTimePercentile": 50,
}
`;

exports[`reducers > analysis should handle set regional analysis grids 1`] = `
Object {
  "active": false,
  "copyRequestSettings": true,
  "isochroneFetchStatus": false,
  "maxTripDurationMinutes": 60,
  "regional": Object {
    "_id": null,
    "breaks": Array [],
    "comparisonGrid": Object {
      "which": "COMPARISON GRID",
    },
    "comparisonId": null,
    "differenceGrid": Object {
      "which": "DIFFERENCE_GRID",
    },
    "grid": Object {
      "which": "GRID",
    },
    "percentile": 50,
    "probabilityGrid": Object {
      "which": "PROBABILITY GRID",
    },
  },
  "requestsSettings": Array [
    Object {
      "accessModes": "WALK",
      "bikeSpeed": 4.166666666666667,
      "bikeTrafficStress": 4,
      "date": "2020-06-10",
      "decayFunction": Object {
        "standardDeviationMinutes": 10,
        "type": "step",
        "widthMinutes": 10,
      },
      "destinationPointSetIds": Array [],
      "directModes": "WALK",
      "egressModes": "WALK",
      "fromTime": 25200,
      "maxBikeTime": 20,
      "maxRides": 4,
      "maxWalkTime": 20,
      "monteCarloDraws": 200,
      "percentiles": Array [
        5,
        25,
        50,
        75,
        95,
      ],
      "toTime": 32400,
      "transitModes": "BUS,TRAM,RAIL,SUBWAY,FERRY,CABLE_CAR,GONDOLA,FUNICULAR",
      "variantIndex": -1,
      "walkSpeed": 1.3888888888888888,
      "workerVersion": "v6.2",
    },
  ],
  "resultsSettings": Array [],
  "scenarioApplicationErrors": null,
  "travelTimePercentile": 50,
}
`;

exports[`reducers > analysis should handle set scenario application errors 1`] = `
Object {
  "active": false,
  "copyRequestSettings": true,
  "isochroneFetchStatus": false,
  "maxTripDurationMinutes": 60,
  "regional": Object {
    "_id": null,
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "percentile": 50,
  },
  "requestsSettings": Array [
    Object {
      "accessModes": "WALK",
      "bikeSpeed": 4.166666666666667,
      "bikeTrafficStress": 4,
      "date": "2020-06-10",
      "decayFunction": Object {
        "standardDeviationMinutes": 10,
        "type": "step",
        "widthMinutes": 10,
      },
      "destinationPointSetIds": Array [],
      "directModes": "WALK",
      "egressModes": "WALK",
      "fromTime": 25200,
      "maxBikeTime": 20,
      "maxRides": 4,
      "maxWalkTime": 20,
      "monteCarloDraws": 200,
      "percentiles": Array [
        5,
        25,
        50,
        75,
        95,
      ],
      "toTime": 32400,
      "transitModes": "BUS,TRAM,RAIL,SUBWAY,FERRY,CABLE_CAR,GONDOLA,FUNICULAR",
      "variantIndex": -1,
      "walkSpeed": 1.3888888888888888,
      "workerVersion": "v6.2",
    },
  ],
  "resultsSettings": Array [],
  "scenarioApplicationErrors": Array [
    Object {
      "messages": Array [
        "Headway is not greater than zero.",
      ],
      "modificationId": "Add Trip Pattern",
      "title": "Error while applying the modification entitled 'Add Trip Pattern'.",
    },
  ],
  "travelTimePercentile": 50,
}
`;

exports[`reducers > analysis should handle update profile request 1`] = `
Object {
  "active": false,
  "copyRequestSettings": true,
  "isochroneFetchStatus": false,
  "maxTripDurationMinutes": 60,
  "regional": Object {
    "_id": null,
    "breaks": Array [],
    "comparisonGrid": null,
    "comparisonId": null,
    "grid": null,
    "percentile": 50,
  },
  "requestsSettings": Array [
    Object {
      "accessModes": "WALK",
      "bikeSpeed": 4.166666666666667,
      "bikeTrafficStress": 4,
      "date": "2020-06-10",
      "decayFunction": Object {
        "standardDeviationMinutes": 10,
        "type": "step",
        "widthMinutes": 10,
      },
      "destinationPointSetIds": Array [],
      "directModes": "WALK",
      "egressModes": "WALK",
      "fromTime": 25200,
      "maxBikeTime": 20,
      "maxRides": 4,
      "maxWalkTime": 20,
      "monteCarloDraws": 200,
      "percentiles": Array [
        5,
        25,
        50,
        75,
        95,
      ],
      "toTime": 32400,
      "transitModes": "BUS,TRAM,RAIL,SUBWAY,FERRY,CABLE_CAR,GONDOLA,FUNICULAR",
      "variantIndex": -1,
      "walkSpeed": 1.3888888888888888,
      "workerVersion": "v6.2",
    },
  ],
  "resultsSettings": Array [],
  "scenarioApplicationErrors": null,
  "travelTimePercentile": 50,
}
`;
